本地化多语言，并将工具栏移动到右侧，参加“显示/窗口”菜单项